stop segments from overflowing

--- a/css/traffic.css
+++ b/css/traffic.css
@@ -16,6 +16,8 @@
     border-color: white;
     border-style: dashed none none none;
     border-width: 3px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .segment {
